@@ -23,8 +23,10 @@
 #include <linux/dcache.h>
 #include <linux/security.h>
 
-#include "ntfs.h"
 #include "dir.h"
+#include "debug.h"
+#include "mft.h"
+#include "ntfs.h"
 
 /**
  * ntfs_lookup - find the inode represented by a dentry in a directory inode
